--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,7 +5,9 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
+pybase62==0.6.0
 PyJWT==2.6.0
 python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.3
+uuid0==0.2.7
